Fix dropdown on small screens to show top

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.dropdown-menu.show {
+  top: unset !important;
+  bottom: 120% !important
+}
